@@ -1478,3 +1478,14 @@ echo test
 	as been fixed.
 	
 	- Fixed errors with the hlp script.
+	
+{{Wednesday 15th, February}}
+
+	- Fixed a lot of memory leaks.
+	
+	- Fixed libcu8_closedir() function. Indeed, the function did not close directory in a
+	correct way.
+	
+	- Fixed libcu8_dup() functions to handle standard input the right way.
+	
+	
