@@ -89,6 +89,8 @@ int main(int argc, char *argv[])
     /* Set the error handler called on errors that require the process to exit */
     pErrorHandler=Dos9_Exit;
 
+    /* atexit(Dos9_Exit); */
+
     /* Process the command line, and set the appropriate special variables for
      * special parameters. (note %0 is set when the absolute path of the script
      * is computed) */
