@@ -1630,5 +1630,13 @@ SATURDAY 12TH, FEBRUARY
 
         - Fixed many manual pages.
 
-        - Fixed if dos9 extention bug. 
+        - Fixed if dos9 extention bug.
+
+MONDAY 13TH, FEBRARY
+
+        - Fixed libcu8 so that it runs flawlessly under windows XP. The bug 
+          consisted of a CRITICAL_SECTION that was wrongly initialized. A 
+          second bug involving libcu8_closedir() as been fixed.
+
+        - Fixed errors with the hlp script.
 
